FrontEnd Edited. (Corrected some align issues )

--- a/public/css/Post.css
+++ b/public/css/Post.css
@@ -7,7 +7,7 @@ header,
 .navbar{
     background-color: rgba(14, 14, 14, 0.719)
 }
-#intro {
+.bg {
     background: url("/img/Search.jpg")no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -15,9 +15,6 @@ header,
     background-size: cover;
 }
 
-.fas{
-    text-align:right
-}
 .card-img-top{
     max-width: 500px;
     max-height: 367px;
